--- a/src/ShoppingListForm.css
+++ b/src/ShoppingListForm.css
@@ -1,3 +1,16 @@
 .shopping-list__form-container {
-  margin-top: 5rem;
+  margin-top: 25px;
+}
+
+.shopping-list__form-container label {
+  display: block;
+  margin: 15px;
+}
+
+.shopping-list__form-container input {
+  margin-left: 5px;
+}
+
+.shopping-list__form-container select {
+  margin-left: 5px;
 }
