Add an error message on the form input
If the item is invalid!

Also, fix some react warnings.

--- a/src/ShoppingListForm.css
+++ b/src/ShoppingListForm.css
@@ -14,3 +14,17 @@
 .shopping-list__form-container select {
   margin-left: 5px;
 }
+
+.shopping-list__form-container .error {
+  border-color: red;
+}
+
+.shopping-list__form-container .error:focus-visible,
+.shopping-list__form-container .error:focus {
+  border-color: red;
+}
+
+.shopping-list__input-errors {
+  font-weight: bold;
+  color: red;
+}
